--- a/photo-filter/style.css
+++ b/photo-filter/style.css
@@ -9,7 +9,7 @@ a:focus {
 }
 body {
   min-height: 100vh;
-  background-color: #313940;
+  background: #313940;
   font-family: 'Open Sans', Arial, Helvetica, sans-serif;
   overflow-x: hidden;
 }
@@ -168,7 +168,7 @@ output {
   --saturate: 100%;
   --hue: 0deg;
 }
-img {
+canvas {
   height: 100%;
   width: 100%;
   max-height: 520px;
@@ -192,12 +192,15 @@ img {
   cursor: pointer;
   background-image: url('assets/svg/fullscreen-open.svg');
 }
+.openfullscreen {
+  background-image: url('assets/svg/fullscreen-exit.svg');
+}
 .fullscreen:hover {
   background-color: rgba(255, 255, 255, 0.5);
 }
-:-webkit-full-screen .fullscreen {
-  background-image: url('assets/svg/fullscreen-exit.svg');
-}
+/* :-webkit-full-screen .fullscreen {
+  background-image: url('assets/svg/fullscreen-open.svg');
+} */
 .footer {
   border-top: 1px solid;
   border-image-slice: 1;
